// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering of the Islan areas in AreaDetail checks if indicators for ISLAND AREAS are present 1`] = `
<DocumentFragment>
  <aside
    data-cy="aside"
  >
    <ul>
      <li>
        <span>
          Tract information
        </span>
      </li>
      <li>
        <span>
          Number:
        </span>
        <span>
           98729374234
        </span>
      </li>
      <li>
        <span>
          County:
        </span>
        <span>
           Brooklyn
        </span>
      </li>
      <li>
        <span>
          Territory: 
        </span>
        <span>
           New York
        </span>
      </li>
      <li>
        <span>
          Population:
        </span>
        <span>
           3,435,435
        </span>
      </li>
    </ul>
    <div>
      <div>
        Tract demographics
      </div>
      <h6>
        Race / Ethnicity
        <span>
          ( 
          <a
            aria-controls="race-panel"
            aria-expanded="false"
            class="usa-link"
            id="race-header"
            tabindex="0"
          >
            show
          </a>
          <img
            alt="expand icon"
            src="test-file-stub"
          />
          )
        </span>
      </h6>
      <section
        aria-labelledby="race-header"
        hidden=""
        id="race-panel"
      >
        <div>
          <span>
            White
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Black or African American
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            American Indian and Alaska Native
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Asian
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Native Hawiian or Pacific Islander
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Other
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Two or more races
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Hispanic or Latino
          </span>
          <span>
            --
          </span>
        </div>
      </section>
      <h6>
        Age
        <span>
          ( 
          <a
            aria-controls="age-panel"
            aria-expanded="false"
            class="usa-link"
            id="age-header"
            tabindex="0"
          >
            show
          </a>
          <img
            alt="expand icon"
            src="test-file-stub"
          />
          )
        </span>
      </h6>
      <section
        aria-labelledby="age-header"
        hidden=""
        id="age-panel"
      >
        <div>
          <span>
            Children under 10
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Ages 10 - 64
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Elderly over 64
          </span>
          <span>
            --
          </span>
        </div>
      </section>
    </div>
    <div>
      <div>
        Identified as disadvantaged?
      </div>
      <div>
        <h3>
          YES
        </h3>
      </div>
      <div>
        <div>
          <div>
            This tract is considered disadvantaged because it meets 3 burden thresholds AND the associated socio-economic threshold.
          </div>
        </div>
      </div>
    </div>
    <a
      href="
          mailto:Screeningtool-Support@omb.eop.gov?subject=
    Census tract ID 98729374234, Brooklyn, New York, ( z/lat/lon: #11.54/36.0762/-84.4494 )
  &body=Please provide feedback about this census tract, including about the datasets, the data categories provided for this census tract, the communities who live in this census tract, and anything else relevant that CEQ should know about this census tract.
    
          "
      rel="noreferrer"
      target="_blank"
    >
      <button
        class="usa-button"
        data-testid="button"
        type="button"
      >
        <div>
          <div>
            Send feedback
          </div>
          <img
            alt="Send feedback"
            src="test-file-stub"
          />
        </div>
      </button>
    </a>
    <div>
      <div>
        <span>
          Income imputed?
        </span>
        <span>
           NO
        </span>
      </div>
      <div>
        <span>
          Adjacency indicator?
        </span>
        <span>
           NO
        </span>
      </div>
      <div>
        <span>
          Tribal lands?
        </span>
        <span>
           0 %
        </span>
      </div>
      <div>
        <span>
          Tribal count?
        </span>
        <span>
           0
        </span>
      </div>
    </div>
    <div
      aria-multiselectable="true"
      class="usa-accordion"
      data-testid="accordion"
    >
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="work-dev"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_work-dev"
          type="button"
        >
          <div>
            <div>
              Workforce development
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_work-dev"
        hidden=""
        id="work-dev"
      >
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low median income
              <div>
                Comparison of income in the tract to incomes in the area
              </div>
            </div>
            <div>
              <div>
                <div>
                  60
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
                <div />
              </div>
              <div>
                <div>
                  below 90
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Unemployment
              <div>
                Number of unemployed people as a part of the labor force
              </div>
            </div>
            <div>
              <div>
                <div>
                  90
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
                <div />
              </div>
              <div>
                <div>
                  above 90
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Poverty
              <div>
                
      Share of people in households where the income is at or below 100% of the Federal poverty level 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  50
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
                <div />
              </div>
              <div>
                <div>
                  below 90
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              High school education
              <div>
                
      Percent of people ages 25 years or older who did not graduate high school 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
                <div />
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
    </div>
    <div>
      Methodology version 1.0
    </div>
  </aside>
</DocumentFragment>
`;

exports[`rendering of the Islan areas in AreaDetail checks if indicators for NATION is present 1`] = `
<DocumentFragment>
  <aside
    data-cy="aside"
  >
    <ul>
      <li>
        <span>
          Tract information
        </span>
      </li>
      <li>
        <span>
          Number:
        </span>
        <span>
           98729374234
        </span>
      </li>
      <li>
        <span>
          County:
        </span>
        <span>
           Brooklyn
        </span>
      </li>
      <li>
        <span>
          State: 
        </span>
        <span>
           New York
        </span>
      </li>
      <li>
        <span>
          Population:
        </span>
        <span>
           3,435,435
        </span>
      </li>
    </ul>
    <div>
      <div>
        Tract demographics
      </div>
      <h6>
        Race / Ethnicity
        <span>
          ( 
          <a
            aria-controls="race-panel"
            aria-expanded="false"
            class="usa-link"
            id="race-header"
            tabindex="0"
          >
            show
          </a>
          <img
            alt="expand icon"
            src="test-file-stub"
          />
          )
        </span>
      </h6>
      <section
        aria-labelledby="race-header"
        hidden=""
        id="race-panel"
      >
        <div>
          <span>
            White
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Black or African American
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            American Indian and Alaska Native
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Asian
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Native Hawiian or Pacific Islander
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Other
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Two or more races
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Hispanic or Latino
          </span>
          <span>
            --
          </span>
        </div>
      </section>
      <h6>
        Age
        <span>
          ( 
          <a
            aria-controls="age-panel"
            aria-expanded="false"
            class="usa-link"
            id="age-header"
            tabindex="0"
          >
            show
          </a>
          <img
            alt="expand icon"
            src="test-file-stub"
          />
          )
        </span>
      </h6>
      <section
        aria-labelledby="age-header"
        hidden=""
        id="age-panel"
      >
        <div>
          <span>
            Children under 10
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Ages 10 - 64
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Elderly over 64
          </span>
          <span>
            --
          </span>
        </div>
      </section>
    </div>
    <div>
      <div>
        Identified as disadvantaged?
      </div>
      <div>
        <h3>
          YES
        </h3>
      </div>
      <div>
        <div>
          <div>
            This tract is considered disadvantaged because it meets 3 burden thresholds AND the associated socio-economic threshold.
          </div>
        </div>
      </div>
    </div>
    <a
      href="
          mailto:Screeningtool-Support@omb.eop.gov?subject=
    Census tract ID 98729374234, Brooklyn, New York, ( z/lat/lon: #11.54/36.0762/-84.4494 )
  &body=Please provide feedback about this census tract, including about the datasets, the data categories provided for this census tract, the communities who live in this census tract, and anything else relevant that CEQ should know about this census tract.
    
          "
      rel="noreferrer"
      target="_blank"
    >
      <button
        class="usa-button"
        data-testid="button"
        type="button"
      >
        <div>
          <div>
            Send feedback
          </div>
          <img
            alt="Send feedback"
            src="test-file-stub"
          />
        </div>
      </button>
    </a>
    <div>
      <div>
        <span>
          Income imputed?
        </span>
        <span>
           NO
        </span>
      </div>
      <div>
        <span>
          Adjacency indicator?
        </span>
        <span>
           NO
        </span>
      </div>
      <div>
        <span>
          Tribal lands?
        </span>
        <span>
           0 %
        </span>
      </div>
      <div>
        <span>
          Tribal count?
        </span>
        <span>
           0
        </span>
      </div>
    </div>
    <div
      aria-multiselectable="true"
      class="usa-accordion"
      data-testid="accordion"
    >
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="climate-change"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_climate-change"
          type="button"
        >
          <div>
            <div>
              Climate change
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_climate-change"
        hidden=""
        id="climate-change"
      >
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Expected agriculture loss rate
              <div>
                Economic loss to agricultural value resulting from natural hazards each year
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
                <div />
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Expected building loss rate
              <div>
                Economic loss to agricultural value resulting from natural hazards each year
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
                <div />
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Expected population loss rate
              <div>
                
      Fatalities and injuries resulting from natural hazards each year
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
                <div />
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Projected flood risk
              <div>
                
      Projected risk to properties from floods from tides, rain, riverine and storm surges in 30 years
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
                <div />
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Projected wildfire risk
              <div>
                
      Projected risk to properties from wildfire from fire fuels, weather, humans, and fire movement
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
                <div />
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low income
              <div>
                
     People in households where income is less than or equal to twice the federal poverty level, not including students enrolled in higher ed 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  19
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
                <div />
              </div>
              <div>
                <div>
                  below 65
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="clean-energy"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_clean-energy"
          type="button"
        >
          <div>
            <div>
              Energy
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_clean-energy"
        hidden=""
        id="clean-energy"
      >
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Energy cost
              <div>
                Average annual energy costs divided by household income
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
                <div />
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              PM2.5 in the air
              <div>
                Level of inhalable particles, 2.5 micrometers or smaller
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
                <div />
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low income
              <div>
                
     People in households where income is less than or equal to twice the federal poverty level, not including students enrolled in higher ed 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  19
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
                <div />
              </div>
              <div>
                <div>
                  below 65
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="health-burdens"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_health-burdens"
          type="button"
        >
          <div>
            <div>
              Health
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_health-burdens"
        hidden=""
        id="health-burdens"
      >
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Asthma
              <div>
                Share of people who have been told they have asthma
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
                <div />
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Diabetes
              <div>
                
      Share of people ages 18 years and older who have diabetes
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
                <div />
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Heart disease
              <div>
                Share of people ages 18 years and older who have been told they have heart disease
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
                <div />
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low life expectancy
              <div>
                Average number of years a person can expect to live
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
                <div />
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low income
              <div>
                
     People in households where income is less than or equal to twice the federal poverty level, not including students enrolled in higher ed 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  19
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
                <div />
              </div>
              <div>
                <div>
                  below 65
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="sustain-house"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_sustain-house"
          type="button"
        >
          <div>
            <div>
              Housing
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_sustain-house"
        hidden=""
        id="sustain-house"
      >
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Housing cost
              <div>
                Share of households making less than 80% of the area median family income and spending more than 30% of income on housing
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  95
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
                <div />
              </div>
              <div>
                <div>
                  above 90
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Lack of green space
              <div>
                Share of land covered with artificial materials like concrete or pavement and crop land
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
                <div />
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Lack of plumbing
              <div>
                Share of homes without indoor kitchens or plumbing
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
                <div />
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Lead paint
              <div>
                
      Share of homes that are not very expensive and are likely to have lead paint
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
                <div />
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low income
              <div>
                
     People in households where income is less than or equal to twice the federal poverty level, not including students enrolled in higher ed 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  19
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
                <div />
              </div>
              <div>
                <div>
                  below 65
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="leg-pollute"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_leg-pollute"
          type="button"
        >
          <div>
            <div>
              Legacy pollution
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_leg-pollute"
        hidden=""
        id="leg-pollute"
      >
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Abandoned mine lands
              <div>
                Presence of an abandoned mine lands within the tract
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
                <div />
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Formerly Used Defense Sites
              <div>
                Presence of a Formerly Used Defense Site within the tract
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
                <div />
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Proximity to hazardous waste facilities
              <div>
                Count of hazardous waste facilities within 5 kilometers
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
                <div />
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Proximity to Superfund sites
              <div>
                Count of proposed or listed Superfund (or National Priorities List) sites within 5 kilometers
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
                <div />
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Proximity to Risk Management Plan facilities
              <div>
                Count of Risk Management Plan facilities within 5 kilometers
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
                <div />
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low income
              <div>
                
     People in households where income is less than or equal to twice the federal poverty level, not including students enrolled in higher ed 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  19
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
                <div />
              </div>
              <div>
                <div>
                  below 65
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="clean-transport"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_clean-transport"
          type="button"
        >
          <div>
            <div>
              Transportation
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_clean-transport"
        hidden=""
        id="clean-transport"
      >
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Diesel particulate matter exposure
              <div>
                Amount of diesel exhaust in the air
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
                <div />
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Transportation barriers
              <div>
                Average of relative cost and time spent on transportation
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
                <div />
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Traffic proximity and volume
              <div>
                Count of vehicles at major roads within 500 meters
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
                <div />
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low income
              <div>
                
     People in households where income is less than or equal to twice the federal poverty level, not including students enrolled in higher ed 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  19
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
                <div />
              </div>
              <div>
                <div>
                  below 65
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="clean-water"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_clean-water"
          type="button"
        >
          <div>
            <div>
              Water
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_clean-water"
        hidden=""
        id="clean-water"
      >
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Leaking underground storage tanks
              <div>
                Formula that counts leaking underground storage tanks and number of all underground storage tanks within 1500 feet
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
                <div />
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Wastewater discharge
              <div>
                Modeled toxic concentrations at parts of streams within 500 meters
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
                <div />
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low income
              <div>
                
     People in households where income is less than or equal to twice the federal poverty level, not including students enrolled in higher ed 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  19
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
                <div />
              </div>
              <div>
                <div>
                  below 65
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="work-dev"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_work-dev"
          type="button"
        >
          <div>
            <div>
              Workforce development
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_work-dev"
        hidden=""
        id="work-dev"
      >
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Linguistic isolation
              <div>
                
    Share of households where no one over the age 14 speaks English well
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  97
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
                <div />
              </div>
              <div>
                <div>
                  above 90
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low median income
              <div>
                Comparison of income in the tract to incomes in the area
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
                <div />
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Unemployment
              <div>
                Number of unemployed people as a part of the labor force
              </div>
            </div>
            <div>
              <div>
                <div>
                  96
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
                <div />
              </div>
              <div>
                <div>
                  above 90
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Poverty
              <div>
                
      Share of people in households where the income is at or below 100% of the Federal poverty level 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  12
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
                <div />
              </div>
              <div>
                <div>
                  below 90
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              High school education
              <div>
                
      Percent of people ages 25 years or older who did not graduate high school 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  <span>
                    98%
                  </span>
                </div>
                <div />
              </div>
              <div>
                <div>
                  above 
                  <span>
                    10%
                  </span>
                   percent
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
    </div>
    <div>
      Methodology version 1.0
    </div>
  </aside>
</DocumentFragment>
`;

exports[`rendering of the Islan areas in AreaDetail checks if indicators for PUERTO RICO are present 1`] = `
<DocumentFragment>
  <aside
    data-cy="aside"
  >
    <ul>
      <li>
        <span>
          Tract information
        </span>
      </li>
      <li>
        <span>
          Number:
        </span>
        <span>
           98729374234
        </span>
      </li>
      <li>
        <span>
          County:
        </span>
        <span>
           Brooklyn
        </span>
      </li>
      <li>
        <span>
          Territory: 
        </span>
        <span>
           New York
        </span>
      </li>
      <li>
        <span>
          Population:
        </span>
        <span>
           3,435,435
        </span>
      </li>
    </ul>
    <div>
      <div>
        Tract demographics
      </div>
      <h6>
        Race / Ethnicity
        <span>
          ( 
          <a
            aria-controls="race-panel"
            aria-expanded="false"
            class="usa-link"
            id="race-header"
            tabindex="0"
          >
            show
          </a>
          <img
            alt="expand icon"
            src="test-file-stub"
          />
          )
        </span>
      </h6>
      <section
        aria-labelledby="race-header"
        hidden=""
        id="race-panel"
      >
        <div>
          <span>
            White
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Black or African American
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            American Indian and Alaska Native
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Asian
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Native Hawiian or Pacific Islander
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Other
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Two or more races
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Hispanic or Latino
          </span>
          <span>
            --
          </span>
        </div>
      </section>
      <h6>
        Age
        <span>
          ( 
          <a
            aria-controls="age-panel"
            aria-expanded="false"
            class="usa-link"
            id="age-header"
            tabindex="0"
          >
            show
          </a>
          <img
            alt="expand icon"
            src="test-file-stub"
          />
          )
        </span>
      </h6>
      <section
        aria-labelledby="age-header"
        hidden=""
        id="age-panel"
      >
        <div>
          <span>
            Children under 10
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Ages 10 - 64
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Elderly over 64
          </span>
          <span>
            --
          </span>
        </div>
      </section>
    </div>
    <div>
      <div>
        Identified as disadvantaged?
      </div>
      <div>
        <h3>
          YES
        </h3>
      </div>
      <div>
        <div>
          <div>
            This tract is considered disadvantaged because it meets 3 burden thresholds AND the associated socio-economic threshold.
          </div>
        </div>
      </div>
    </div>
    <a
      href="
          mailto:Screeningtool-Support@omb.eop.gov?subject=
    Census tract ID 98729374234, Brooklyn, New York, ( z/lat/lon: #11.54/36.0762/-84.4494 )
  &body=Please provide feedback about this census tract, including about the datasets, the data categories provided for this census tract, the communities who live in this census tract, and anything else relevant that CEQ should know about this census tract.
    
          "
      rel="noreferrer"
      target="_blank"
    >
      <button
        class="usa-button"
        data-testid="button"
        type="button"
      >
        <div>
          <div>
            Send feedback
          </div>
          <img
            alt="Send feedback"
            src="test-file-stub"
          />
        </div>
      </button>
    </a>
    <div>
      <div>
        <span>
          Income imputed?
        </span>
        <span>
           NO
        </span>
      </div>
      <div>
        <span>
          Adjacency indicator?
        </span>
        <span>
           NO
        </span>
      </div>
      <div>
        <span>
          Tribal lands?
        </span>
        <span>
           0 %
        </span>
      </div>
      <div>
        <span>
          Tribal count?
        </span>
        <span>
           0
        </span>
      </div>
    </div>
    <div
      aria-multiselectable="true"
      class="usa-accordion"
      data-testid="accordion"
    >
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="clean-energy"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_clean-energy"
          type="button"
        >
          <div>
            <div>
              Energy
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_clean-energy"
        hidden=""
        id="clean-energy"
      >
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Energy cost
              <div>
                Average annual energy costs divided by household income
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
                <div />
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              PM2.5 in the air
              <div>
                Level of inhalable particles, 2.5 micrometers or smaller
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
                <div />
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low income
              <div>
                
     People in households where income is less than or equal to twice the federal poverty level, not including students enrolled in higher ed 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  19
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
                <div />
              </div>
              <div>
                <div>
                  below 65
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="sustain-house"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_sustain-house"
          type="button"
        >
          <div>
            <div>
              Housing
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_sustain-house"
        hidden=""
        id="sustain-house"
      >
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Housing cost
              <div>
                Share of households making less than 80% of the area median family income and spending more than 30% of income on housing
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  95
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
                <div />
              </div>
              <div>
                <div>
                  above 90
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low income
              <div>
                
     People in households where income is less than or equal to twice the federal poverty level, not including students enrolled in higher ed 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  19
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
                <div />
              </div>
              <div>
                <div>
                  below 65
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="leg-pollute"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_leg-pollute"
          type="button"
        >
          <div>
            <div>
              Legacy pollution
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_leg-pollute"
        hidden=""
        id="leg-pollute"
      >
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Abandoned mine lands
              <div>
                Presence of an abandoned mine lands within the tract
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
                <div />
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Formerly Used Defense Sites
              <div>
                Presence of a Formerly Used Defense Site within the tract
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
                <div />
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Proximity to hazardous waste facilities
              <div>
                Count of hazardous waste facilities within 5 kilometers
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
                <div />
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Proximity to Superfund sites
              <div>
                Count of proposed or listed Superfund (or National Priorities List) sites within 5 kilometers
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
                <div />
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Proximity to Risk Management Plan facilities
              <div>
                Count of Risk Management Plan facilities within 5 kilometers
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
                <div />
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low income
              <div>
                
     People in households where income is less than or equal to twice the federal poverty level, not including students enrolled in higher ed 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  19
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
                <div />
              </div>
              <div>
                <div>
                  below 65
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="work-dev"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_work-dev"
          type="button"
        >
          <div>
            <div>
              Workforce development
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_work-dev"
        hidden=""
        id="work-dev"
      >
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low median income
              <div>
                Comparison of income in the tract to incomes in the area
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
                <div />
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Unemployment
              <div>
                Number of unemployed people as a part of the labor force
              </div>
            </div>
            <div>
              <div>
                <div>
                  96
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
                <div />
              </div>
              <div>
                <div>
                  above 90
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Poverty
              <div>
                
      Share of people in households where the income is at or below 100% of the Federal poverty level 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  12
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
                <div />
              </div>
              <div>
                <div>
                  below 90
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              High school education
              <div>
                
      Percent of people ages 25 years or older who did not graduate high school 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  <span>
                    98%
                  </span>
                </div>
                <div />
              </div>
              <div>
                <div>
                  above 
                  <span>
                    10%
                  </span>
                   percent
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
    </div>
    <div>
      Methodology version 1.0
    </div>
  </aside>
</DocumentFragment>
`;
